--- a/c++/CMakeLists.txt
+++ b/c++/CMakeLists.txt
@@ -3,4 +3,4 @@ project(bank_sim)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(bank_sim main.cpp clients.cpp clients.h random.h services.cpp services.h)
+add_executable(bank_sim main.cpp clients.cpp clients.h random.h services.cpp services.h elapsed_time.h common.h)
